bugfix: label whitespace

--- a/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/deposit.less
+++ b/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/deposit.less
@@ -54,7 +54,8 @@
   }
 
   .ui.form label.helptext{
-    margin: 0em 0em 0.28571429rem 0em;
+    margin-top: -8px;
+    margin-bottom: 15px;
     display: block;
     color: #737373;
     font-weight: normal;
